objects/CE_Dashboard_Component__c.object
<CustomObject>
    <fields>
        <fullName>DD_Sales_Engineer_1__c</fullName>
        <label>DD_Sales_Engineer_1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Sales_Engineer_2__c</fullName>
        <label>DD_Sales_Engineer_2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Sales_Engineer_3__c</fullName>
        <label>DD_Sales_Engineer_3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Sales_Manager_1__c</fullName>
        <label>DD_Sales_Manager_1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Sales_Manager_2__c</fullName>
        <label>DD_Sales_Manager_2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEN_Sales_Engineer_1__c</fullName>
        <label>DEN_Sales_Engineer_1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEN_Sales_Engineer_2__c</fullName>
        <label>DEN_Sales_Engineer_2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEN_Sales_Engineer_3__c</fullName>
        <label>DEN_Sales_Engineer_3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEN_Sales_Manager_1__c</fullName>
        <label>DEN_Sales_Manager_1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEN_Sales_Manager_2__c</fullName>
        <label>DEN_Sales_Manager_2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Sales_Engineer_1__c</fullName>
        <label>HS_Sales_Engineer_1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Sales_Engineer_2__c</fullName>
        <label>HS_Sales_Engineer_2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Sales_Engineer_3__c</fullName>
        <label>HS_Sales_Engineer_3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Sales_Manager_1__c</fullName>
        <label>HS_Sales_Manager_1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Sales_Manager_2__c</fullName>
        <label>HS_Sales_Manager_2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCCC_Sales_Engineer_1__c</fullName>
        <label>RCCC_Sales_Engineer_1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCCC_Sales_Engineer_2__c</fullName>
        <label>RCCC_Sales_Engineer_2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCCC_Sales_Engineer_3__c</fullName>
        <label>RCCC_Sales_Engineer_3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCCC_Sales_Manager_1__c</fullName>
        <label>RCCC_Sales_Manager_1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCCC_Sales_Manager_2__c</fullName>
        <label>RCCC_Sales_Manager_2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>